corrected notifications